# SmartHomePlayer

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  airplay_logic.c  airplay_logic.h  j4a_allclasses.c  j4a_allclasses.include.h  j4a_allclasses.loader.h  j4a_base.c  jni_helper.h  jni_raop_server.cpp  log.h
app/src/main/cpp/lib/: CMakeLists.txt  dnssd.c  http_handlers.h
app/src/main/cpp/openssl/armeabi-v7a/include/openssl/: configuration.h
app/src/main/java/com/smart/home/: AirplayLogic.java  MainActivity.java  MirrorConstant.java  PlayActivity.java  RaopServer.java  SmartApplication.java
app/src/main/java/com/smart/home/model/: NALPacket.java  PCMPacket.java
app/src/main/java/com/smart/home/player/: AudioPlayer.java  VideoPlayer.java
app/src/main/res/layout/: activity_main.xml  activity_play.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
